apps/gpt-researcher/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gpt-researcher-backend
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: gpt-researcher-backend
  template:
    metadata:
      labels:
        app: gpt-researcher-backend
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: type
                    operator: In
                    values:
                      - app-worker
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: gpt-researcher-backend
          image: ghcr.io/ai-cfia/gpt-researcher:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: docs-pvc
              mountPath: /usr/src/app/my-docs
      volumes:
        - name: docs-pvc
          persistentVolumeClaim:
            claimName: gptresearcher-my-docs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: gpt-researcher-backend-svc
spec:
  type: ClusterIP
  selector:
    app: gpt-researcher-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
