apps/gpt-researcher/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gpt-researcher-frontend
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: gpt-researcher-frontend
  template:
    metadata:
      labels:
        app: gpt-researcher-frontend
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: type
                    operator: In
                    values:
                      - app-worker
      containers:
        - name: gpt-researcher-frontend
          image: ghcr.io/ai-cfia/gpt-researcher-frontend-prod:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.5.1
          imagePullPolicy: Always
          ports:
            - containerPort: 4180
          args:
            - --provider=keycloak-oidc
            - --http-address=0.0.0.0:4180
            - --upstream=http://0.0.0.0:3000/
            - --redirect-url=https://gptr.inspection.alpha.canada.ca
            - --oidc-issuer-url=https://keycloak.inspection.alpha.canada.ca/realms/infrastructure
            - --email-domain=inspection.gc.ca
            - --client-id=gptr
            - --client-secret=$(OAUTH2_CLIENT_SECRET)
---
apiVersion: v1
kind: Service
metadata:
  name: gpt-researcher-frontend-svc
spec:
  type: ClusterIP
  selector:
    app: gpt-researcher-frontend
  ports:
    - protocol: TCP
      port: 4180
      targetPort: 4180
