apps/gpt-researcher/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gpt-researcher-gateway
spec:
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 10.140.79.11
  gatewayClassName: cilium
  listeners:
    - name: https-gptr
      hostname: gptr.inspection.alpha.canada.ca
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: gpt-researcher-tls
            kind: Secret
    - name: https-gptr-b
      hostname: gptr-b.inspection.alpha.canada.ca
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: gpt-researcher-tls
            kind: Secret
