apps/gpt-researcher/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: gpt-researcher-frontend-route
spec:
  parentRefs:
    - name: gpt-researcher-gateway
  hostnames:
    - gptr.inspection.alpha.canada.ca
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: gpt-researcher-frontend-svc
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: gpt-researcher-backend-route
spec:
  parentRefs:
    - name: gpt-researcher-gateway
  hostnames:
    - gptr-b.inspection.alpha.canada.ca
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: gpt-researcher-backend-svc
          port: 8000
