apps/gpt-researcher/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gpt-researcher-ingress
  annotations:
    lbipam.cilium.io/ips: 10.140.79.11
    ingress.cilium.io/loadbalancer-mode: dedicated
    ingress.cilium.io/service-type: LoadBalancer
    ingress.cilium.io/service-external-traffic-policy: Cluster
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - gptr.inspection.alpha.canada.ca
        - gptr-b.inspection.alpha.canada.ca
      secretName: gpt-researcher-tls
  rules:
    - host: gptr.inspection.alpha.canada.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gpt-researcher-frontend-svc
                port:
                  number: 3000
    - host: gptr-b.inspection.alpha.canada.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gpt-researcher-backend-svc
                port:
                  number: 8000
